tests/should_fail/question_mark_on_bool.nv
module main

// SHOULD FAIL: ? on a Bool (not an Option)
let b = true
let x = b?
